20200407重新学习一遍

--- a/Part.3.B.4.regex.ipynb
+++ b/Part.3.B.4.regex.ipynb
@@ -1263,6 +1263,66 @@
       "========================================================================\n",
       "Hello.  How are you feeling today?\n"
      ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good\n",
+      "good.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  worse\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "worse\n",
+      "Why do you say that worse?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  cao\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cao\n",
+      "Let's change focus a bit... Tell me about your family.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  ni ma\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ni ma\n",
+      "I see.  And what does that tell you?\n"
+     ]
     }
    ],
    "source": [
@@ -1632,9 +1692,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
