--- a/Part.1.E.5.strings.ipynb
+++ b/Part.1.E.5.strings.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
        "'NOW IS BETTER THAN NEVER.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1100,7 +1100,7 @@
        "'now is better than never.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,6 +1778,9 @@
    "metadata": {
     "button": false,
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1880,6 +1883,9 @@
    "metadata": {
     "button": false,
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1934,6 +1940,9 @@
    "metadata": {
     "button": false,
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -2249,8 +2258,7 @@
     "new_sheet": false,
     "run_control": {
      "read_only": false
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -2746,10 +2754,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.2"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
